icon ve metalar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yazılım Bilgini Kanıtla</title>
+    <meta property="og:site_name" content="Yazılımını Kanıtla" />
+    <meta property="og:type" content="website" />
+    <link rel="apple-touch-icon" sizes="192x192" href="icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icon.png">
+    <meta name="searchgov_custom1" content="Yazılımını Kanıtla">
+    <meta name="searchgov_custom2" content="Yazılım Yarışma">
+    <meta name="searchgov_custom3" content="Yazılımını Kanıtla Online">
+    <meta name="searchgov_custom4" content="Yazılım Bilgini Göster">
+    <meta name="searchgov_custom5" content="Yazılım Bilgini Kanıtla">
+    <meta name="application-name" content="Yazılımını Kanıtla">
+    <meta name="robots" content="index,follow,noodp">
+    <meta name="googlebot" content="index,follow">
+    <meta name="google" content="notranslate">
+    <meta name="google-site-verification" content="verification_token">
+    <meta name="googlebot" content="index,follow">
+    <meta name="keywords" content="Yazılım, kodlama, yazılım oyunu, kodlama oyunu, yazılım oyunları, kodlama oyunları, yazılım yarışması, kodlama yarışması, teknofest, teknofest iha, tenkofest yazılım, yazılım bilmece, kodlama bilmece, yazılım bilgi, kodlama bilgi, yazılım soru, yazılım soru çözümü, html, javascript, java, python, html test çöz, java test çöz, javascript test çöz, yazılım alıştırma, yazılım bilgi, kodlama sitesi, bro code, yazılım oyun, kodlama oyun, yazılım oyunu, kodlama oyunu, Yazılım öğrenme oyunu, kodlama öğrenme oyunu" />
+    <meta property="article:published_time" content="2024-02-08" />
+    <meta property="og:image" content="icon.png" />
+    <meta name="description" content="Yazılım bilgini 'kanıtla'! K.O.">
+    <link rel="icon" href="icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap" rel="stylesheet">
