--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 </head>
 <body onkeypress="tekrar(event)" style="background-color: rgb(3, 0, 7); margin: 0;">
     <main>
-        <h1 class="score">0</h1>
+        <h1 class="score"></h1>
         <div style="text-align: center;" id="ekran">
             <h1 id="baslik">Yazılım Bilgini Kanıtla</h1>
             <h3 class="haber">YENİ: C++ ve C# dilleri eklendi!</h3>
