--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <h1 id="baslik">Yazılım Bilgini Kanıtla</h1>
             <h3 class="haber">YENİ: C++ ve C# dilleri eklendi!</h3>
             <p id="soru">Hangi programlama dilindeki bilgini kanıtlamak istersin?</p>
-            <input list="ototamam" type="text" id="dil" onkeydown="check(event)" autofocus="on" autocomplete="off" placeholder="Geçerli bir dil giriniz..." autocapitalize="words" />
+            <input list="ototamam" type="text" id="dil" onkeydown="check(event)" autofocus="on" autocomplete="off" placeholder="Geçerli bir dil giriniz..." autocapitalize="words">
             <datalist id="ototamam">
                 <option value="HTML" class="oneri">HTML</option>
                 <option value="Python" class="oneri">Python</option>
