--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             font-optical-sizing: auto;
             font-weight: 500;
             font-style: normal;
+            font-size: calc(50% + .75dvw);
         }
         #baslik{
             margin: calc(2.5% - 1dvw) 0 3% 0;
