--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yazılım Bilgini Kanıtla</title>
-    <meta property="og:site_name" content="Yazılımını Kanıtla" />
+    <meta property="og:site_name" content="Yazılım Bilgini Kanıtla">
     <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icon.png">
