--- a/index.html
+++ b/index.html
@@ -178,6 +178,32 @@
             font-size: calc(20% + 1dvw);
             max-width: 15%; 
         }
+        #link{
+            position: absolute;
+            right: 0;
+            width: calc(12.5% + 2svw);
+            height: calc(15% + 2svh);
+            top: 8rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+        }
+        #discord{
+            margin: 0;
+            position: relative;
+            width: calc(15% + 5svw);
+            opacity: .9;
+        }
+        #discorddavet{
+            margin: 0;
+            text-align: center;
+            position: relative;
+            display: inline-block;
+            font-size: calc(20% + 1dvw);
+            max-width: 10svw;
+        }
     </style>
 </head>
 <body onkeypress="tekrar(event)" style="background-color: rgb(3, 0, 7); margin: 0;">
@@ -210,6 +236,17 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="calc(1.5% + 4svw)" height="auto" viewBox="5.368 13.434 53.9 37.855" id="youtube"><path fill="#FFF" d="M41.272 31.81c-4.942-2.641-9.674-5.069-14.511-7.604v15.165c5.09-2.767 10.455-5.301 14.532-7.561h-.021z"></path><path fill="#E8E0E0" d="M41.272 31.81c-4.942-2.641-14.511-7.604-14.511-7.604l12.758 8.575c.001 0-2.324 1.289 1.753-.971z"></path><path fill="#CD201F" d="M27.691 51.242c-10.265-.189-13.771-.359-15.926-.803-1.458-.295-2.725-.95-3.654-1.9-.718-.719-1.289-1.816-1.732-3.338-.38-1.268-.528-2.323-.739-4.9-.323-5.816-.4-10.571 0-15.884.33-2.934.49-6.417 2.682-8.449 1.035-.951 2.239-1.563 3.591-1.816 2.112-.401 11.11-.718 20.425-.718 9.294 0 18.312.317 20.426.718 1.689.317 3.273 1.267 4.203 2.492 2 3.146 2.035 7.058 2.238 10.118.084 1.458.084 9.737 0 11.195-.316 4.836-.57 6.547-1.288 8.321-.444 1.12-.823 1.711-1.479 2.366a7.085 7.085 0 0 1-3.76 1.922c-8.883.668-16.426.813-24.987.676zM41.294 31.81c-4.942-2.641-9.674-5.09-14.511-7.625v15.166c5.09-2.767 10.456-5.302 14.532-7.562l-.021.021z"></path></svg>
         </a>
         <p id="destek">Buradan bana destek olabilirsin!</p>
+        <a href="https://discord.gg/NsrW78PhMn" id="link">
+            <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 100 100" viewBox="0 0 100 100" id="discord"><path fill="#6665d2" d="M85.22,24.958c-11.459-8.575-22.438-8.334-22.438-8.334l-1.122,1.282
+				c13.623,4.087,19.954,10.097,19.954,10.097c-19.491-10.731-44.317-10.654-64.59,0c0,0,6.571-6.331,20.996-10.418l-0.801-0.962
+				c0,0-10.899-0.24-22.438,8.334c0,0-11.54,20.755-11.54,46.319c0,0,6.732,11.54,24.442,12.101c0,0,2.965-3.526,5.369-6.571
+				c-10.177-3.045-14.024-9.376-14.024-9.376c6.394,4.001,12.859,6.505,20.916,8.094c13.108,2.698,29.413-0.076,41.591-8.094
+				c0,0-4.007,6.491-14.505,9.456c2.404,2.965,5.289,6.411,5.289,6.411c17.71-0.561,24.441-12.101,24.441-12.02
+				C96.759,45.713,85.22,24.958,85.22,24.958z M35.055,63.824c-4.488,0-8.174-3.927-8.174-8.815
+				c0.328-11.707,16.102-11.671,16.348,0C43.229,59.897,39.622,63.824,35.055,63.824z M64.304,63.824
+				c-4.488,0-8.174-3.927-8.174-8.815c0.36-11.684,15.937-11.689,16.348,0C72.478,59.897,68.872,63.824,64.304,63.824z"></path></svg>
+            <p id="discorddavet">Discord sunucumuza katıl!</p>
+        </a>
     </main>
     <script src="script.js">
     </script>
